src/objects/revenueEstimate__c.object
<CustomObject>
    <fields>
        <fullName>InactiveNotes__c</fullName>
        <description>Reason for RE being Inactive</description>
        <label>Inactive Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenue Estimates</relationshipLabel>
        <relationshipName>Revenue_Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SRP_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SRP Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WellUnitAllocationExtId__c</fullName>
        <formula>CASESAFEID(unitAllocation__c)+ CASESAFEID(monthlyProduction__r.Well__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well Unit Allocation Ext Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>excludeFromSRPRevenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from SRP Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLastProductionMonth__c</fullName>
        <formula>IF( productionMonth__c = monthlyProduction__r.Well__r.Last_Production_Month__c ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Last Production Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUnitSame__c</fullName>
        <formula>If( monthlyProduction__r.Well__r.Unit__c =  unitAllocation__r.unit__c ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isUnitSame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>monthlyProduction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monthly Production</label>
        <referenceTo>Monthly_Production__c</referenceTo>
        <relationshipName>Owner_Interest_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>operatorName__c</fullName>
        <formula>monthlyProduction__r.Well__r.Current_Operator_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ownerAdjustment__c</fullName>
        <formula>/*monthlyProduction__r.Well_Gross_Taxes__c * unitAllocation__r.unitNRI__c*/
monthlyProduction__r.Well_Gross_Taxes__c * unitAllocation__r.uaNRI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ownerGrossValue__c</fullName>
        <formula>monthlyProduction__r.Well_Gross_Revenue_Value__c * unitAllocation__r.uaNRI__c
/*monthlyProduction__r.Well_Gross_Revenue_Value__c * unitAllocation__r.unitNRI__c*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Gross Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ownerNetRevenueValueGas__c</fullName>
        <formula>/*monthlyProduction__r.Well_Net_Revenue_Value_Gas__c * unitAllocation__r.unitNRI__c*/
monthlyProduction__r.Well_Net_Revenue_Value_Gas__c * unitAllocation__r.uaNRI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Net Revenue Value Gas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ownerNetRevenueValueOil__c</fullName>
        <formula>/*monthlyProduction__r.Well_Net_Revenue_Value_Oil__c* unitAllocation__r.unitNRI__c*/
monthlyProduction__r.Well_Net_Revenue_Value_Oil__c* unitAllocation__r.uaNRI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Net Revenue Value Oil</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ownerNetRevenueValue__c</fullName>
        <formula>/*monthlyProduction__r.Well_Net_Revenue_Value__c * unitAllocation__r.unitNRI__c*/
monthlyProduction__r.Well_Net_Revenue_Value__c * unitAllocation__r.uaNRI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Net Revenue Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>paymentNotes__c</fullName>
        <label>Payment Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>productionMonth__c</fullName>
        <formula>monthlyProduction__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>unitAllocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Allocation</label>
        <referenceTo>unitAllocation__c</referenceTo>
        <relationshipLabel>Revenue Estimates</relationshipLabel>
        <relationshipName>Owner_Interest_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wellGrossRevenueValue__c</fullName>
        <formula>monthlyProduction__r.Well_Gross_Revenue_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well Gross Revenue Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>wellGrossTaxes__c</fullName>
        <formula>monthlyProduction__r.Well_Gross_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well Gross Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>wellId__c</fullName>
        <formula>CASESAFEID(monthlyProduction__r.Well__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wellInterestAllocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Well Interest Allocation</label>
        <referenceTo>wellInterestAllocation__c</referenceTo>
        <relationshipLabel>Revenue Estimates</relationshipLabel>
        <relationshipName>Revenue_Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wellName__c</fullName>
        <formula>monthlyProduction__r.Well__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wellNetRevenueValue__c</fullName>
        <formula>monthlyProduction__r.Well_Net_Revenue_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well Net Revenue Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Revenue Estimate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RE-{000000}</displayFormat>
        <label>RevenueEstimate  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>